adding docker in

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,11 +2,12 @@
 
 FROM ubuntu:22.04
 
-COPY ./docker/install_system_deps.sh /tmp/install_system_deps.sh
+COPY ./install_system_deps.sh /tmp/install_system_deps.sh
 RUN chmod +x /tmp/install_system_deps.sh
-
 RUN /bin/bash /tmp/install_system_deps.sh
+RUN python3 --version
 
 COPY ./requirements.txt /requirements.txt
 
 RUN pip install -r requirements.txt
+RUN python3 -m pip freeze
